subscription mobile issue resolved

--- a/assets/main.css
+++ b/assets/main.css
@@ -2723,7 +2723,7 @@ ul {
   content: "";
   position: absolute;
   top: 50%;
-  left: -25px;
+  left: -20px;
   transform: translateY(-50%);
   height: 10px;
   width: 10px;
