--- a/styles/sections/_product-details.scss
+++ b/styles/sections/_product-details.scss
@@ -157,7 +157,7 @@
               content: "";
               position: absolute;
               top: 50%;
-              left: -25px;
+              left: -20px;
               transform: translateY(-50%);
               height: 10px;
               width: 10px;
